# cytolib

./: CMakeLists.txt  DESCRIPTION  INSTALL  LICENSE  NAMESPACE  README.md  cleanup  cleanup.win  configure  configure.ac  cytolibConfig.h.in  get_version.sh  getverion.sh  new_version.md  switch_cytotool_version.R
.github/workflows/: build.yml
R/: build.R  hooks.R  zzz.R
docs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml
docs/articles/: cytolib.html  index.html
docs/reference/: cytolib_LdFlags.html  index.html
inst/: CMakeLists.txt  INSTALL.txt
inst/include/: GatingSet.proto  generate_pb_code.sh
inst/include/cytolib/: CytoFrame.hpp  CytoFrameView.hpp  CytoSet.hpp  CytoVFS.hpp  GatingHierarchy.hpp  GatingSet.hpp  GatingSet.pb.h  H5CytoFrame.hpp  H5CytoSet.hpp  H5RCytoFrame.hpp  MemCytoFrame.hpp  MemCytoSet.hpp  POPINDICES.hpp  TileCytoFrame.hpp  calibrationTable.hpp  compensation.hpp  config.hpp  cytolibConfig.h  datatype.hpp  delimitedMessage.hpp  ellipse2points.hpp  flowData.hpp  gate.hpp  global.hpp  in_polygon.hpp  nodeProperties.hpp  populationTree.hpp  readFCSHeader.hpp  readFCSdata.hpp  spline.hpp  trans_group.hpp  transformation.hpp
inst/utest/: CytoFrame_accessors.cpp  CytoSet_accessors.cpp  GatingSet_accessors.cpp  MemCytoFrame_accessors.cpp  fixture.hpp  main.cpp  parseFCS.cpp  readfcs.cpp  testSuite.cpp  test_header.hpp
man/: LdFlags.Rd  cytolib_LdFlags.Rd
src/: CMakeLists.txt  CytoFrame.cpp  CytoFrameView.cpp  CytoVFS.cpp  GatingHierarchy.cpp  GatingSet.cpp  GatingSet.pb.cc  H5CytoFrame.cpp  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  MemCytoFrame.cpp  POPINDICES.cpp  calibrationTable.cpp  compensation.cpp  cytolib-bundle.mri.in  delimitedMessage.cpp  dummy.cpp  ellipse2points.cpp  flowData.cpp  gate.cpp  global.cpp  in_polygon.cpp  nodeProperties.cpp  readFCSdata.cpp  readHeaderAndText.cpp  spline.cpp  trans_group.cpp  transformation.cpp
src/boost/: README
src/include/: GatingHierarchy.hpp  GatingSet.hpp  calibrationTable.hpp  flowData.hpp  global.hpp  spline.hpp  transformation.hpp
src/src/: CytoFrameView.cpp  GatingHierarchy.cpp  in_polygon.cpp  trans_group.cpp
tools/config/: cleanup.R  configure.R
vignettes/: cytolib.Rmd
